Ajuste do CORS para o vercel falar com o back